2011-05-11  Kent Tamura  <tkent@chromium.org>

Reviewed by Hajime Morita.

        The position of validation message bubble is wrong for non text fields.
        https://bugs.webkit.org/show_bug.cgi?id=60341

        * fast/forms/resources/common.js: Added. Helper functions for fast/forms.
        * fast/forms/validation-message-on-checkbox-expected.txt: Added.
        * fast/forms/validation-message-on-checkbox.html: Added.
        * fast/forms/validation-message-on-listbox-expected.txt: Added.
        * fast/forms/validation-message-on-listbox.html: Added.
        * fast/forms/validation-message-on-menulist-expected.txt: Added.
        * fast/forms/validation-message-on-menulist.html: Added.
        * fast/forms/validation-message-on-radio-expected.txt: Added.
        * fast/forms/validation-message-on-radio.html: Added.
        * fast/forms/validation-message-on-textarea-expected.txt: Added.
        * fast/forms/validation-message-on-textarea.html: Added.
        * platform/chromium/test_expectations.txt:
        * platform/gtk/Skipped:
        * platform/mac/fast/forms/validation-message-appearance-expected.png: Updated.
        * platform/mac/fast/forms/validation-message-appearance-expected.txt: Updated.
        * platform/qt/Skipped:
        * platform/win/Skipped:
2011-05-11  Kent Tamura  <tkent@chromium.org>

        Reviewed by Hajime Morita.

        The position of validation message bubble is wrong for non text fields.
        https://bugs.webkit.org/show_bug.cgi?id=60341

        Tests: fast/forms/validation-message-on-checkbox.html
               fast/forms/validation-message-on-listbox.html
               fast/forms/validation-message-on-menulist.html
               fast/forms/validation-message-on-radio.html
               fast/forms/validation-message-on-textarea.html

        * css/html.css:
        (::-webkit-validation-bubble-message):
          Add white-space:normal in order not to inherit white-space:pre for <select>.
        * html/ValidationMessage.cpp:
        (WebCore::adjustBubblePosition):
          Adjust the bubble position.
          - The top of the bubble should be same as the bottom of the target control.
          - The left of the bubble should be same as the left of the target control.
            But If the left+32 is larger than the center of the target control,
            left+32 should be at the center of the target control.
            But the left position should not be less than 0.
        (WebCore::ValidationMessage::buildBubbleTree): Call adjustBubblePosition().

Canonical link: https://commits.webkit.org/75882@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86224 268f45cc-cd09-0410-ab3c-d52691b4dbfc